prisma schema creation

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.4.6",
+    "@prisma/client": "^3.14.0",
     "apollo-server-fastify": "^3.8.1",
     "graphql": "^16.5.0",
+    "graphql-iso-date": "^3.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
