--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev": "concurrently \"npm:start:dev\" \"npm:gen-typings\" \"npm:prisma:generate\"",
     "start:dev": "nest start --watch",
     "gen-typings": "ts-node ./src/generate-typings.ts",
+    "prisma:generate": "prisma generate --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -32,8 +37,9 @@
     "@nestjs/platform-fastify": "^8.4.6",
     "@prisma/client": "^3.14.0",
     "apollo-server-fastify": "^3.8.1",
+    "concurrently": "^7.2.1",
     "graphql": "^16.5.0",
-    "graphql-iso-date": "^3.6.1",
+    "prisma": "^3.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -54,6 +60,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
     "prettier": "^2.3.2",
+    "prisma-nestjs-graphql": "^16.0.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
