--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apollo-server-fastify": "^3.8.1",
     "concurrently": "^7.2.1",
     "graphql": "^16.5.0",
+    "graphql-type-json": "^0.3.2",
     "prisma": "^3.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
